bump a few versions; cleanup